# libwm

./: .clang-format  .gitignore  .gitmodules  BUGS.MD  README.md  meson.build
config/: default_config.json  test.json
scripts/: move_config.sh  setup.sh  sleep.sh  test.sh  update_submodules.sh
src/: main.cpp  meson.build
src/logger/: meson.build
src/logger/public/: logger.hpp
src/wm/: meson.build
src/wm/private/general/: config.cpp  input_functions.cpp  keybinding.cpp  shapes.cpp  shapes.hpp
src/wm/private/x11/: flow_wm.cpp  flow_wm_x11.cpp
src/wm/private/x11/handlers/: handlers.hpp
src/wm/private/xlib/: flow_wm_xlib.cpp
src/wm/private/xlib/border/: border.cpp
src/wm/private/xlib/client/: client.cpp  client.hpp
src/wm/private/xlib/client_manager/: client_manager.cpp  client_manager.hpp
src/wm/private/xlib/color_scheme/: color_scheme.cpp
src/wm/private/xlib/cursor/: cursor.cpp
src/wm/private/xlib/drawable_window/: drawable_window.cpp
src/wm/private/xlib/fnt/: fnt.cpp
src/wm/private/xlib/handlers/: handler_helpers.cpp  handler_helpers.hpp  handlers.cpp  handlers.hpp
src/wm/private/xlib/keyboard_manager/: keyboard_manager.cpp
src/wm/private/xlib/screens/: screens.cpp  screens.hpp
src/wm/private/xlib/shell/: shell.cpp
src/wm/public/: flow_wm.hpp  flow_wm_x11.hpp  flow_wm_xlib.hpp
src/wm/public/general/: config.hpp  inline_functions.hpp  input_functions.hpp  keybinding.hpp  masks.hpp  shapes.hpp
src/wm/public/xlib/border/: border.hpp
src/wm/public/xlib/client/: client.hpp
src/wm/public/xlib/client_manager/: client_manager.hpp
src/wm/public/xlib/color_scheme/: color_scheme.hpp
src/wm/public/xlib/cursor/: cursor.hpp
src/wm/public/xlib/drawable_window/: drawable_window.hpp
src/wm/public/xlib/enums/: enums.hpp
src/wm/public/xlib/fnt/: fnt.hpp
src/wm/public/xlib/handler_helpers/: handler_helpers.hpp
src/wm/public/xlib/handlers/: handlers.hpp
src/wm/public/xlib/keyboard_manager/: keyboard_manager.hpp
src/wm/public/xlib/screens/: screens.hpp
src/wm/public/xlib/shell/: shell.hpp
subprojects/: shell-base.wrap
